add exposition of slie-associated files

--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -59,6 +59,7 @@ packages:
 - rasterio
 - matplotlib
 - tree
+- pandas
 #
 # In the channels section, list any Conda channel URLs to be searched
 # for packages.
