--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -95,3 +95,9 @@ env_specs:
     packages: []
     channels: []
     platforms: []
+
+# This is a temporary fix to remove warnings 
+# about notebooks without commands
+skip_imports:
+  notebooks: true
+
