--- a/anaconda-project.yml
+++ b/anaconda-project.yml
@@ -69,6 +69,8 @@ packages:
 # channels:
 #    - mychannel
 #
+- geopandas
+- tqdm
 channels: []
 
 #
@@ -93,3 +95,9 @@ env_specs:
     packages: []
     channels: []
     platforms: []
+
+# This is a temporary fix to remove warnings 
+# about notebooks without commands
+skip_imports:
+  notebooks: true
+
